--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     </head>
     <body>
         <div id="app"></div>
-    <script type="text/javascript" src="/bundle.js"></script></body>
+    <script type="text/javascript" src="/shakuro-payment-terminal/bundle.js"></script></body>
 </html>
